# cmake-cxx-template

./: .gitignore  CMakeLists.txt
test/: CMakeLists.txt  dummy.cpp
